<resources>
    <string name="app_name">Reservation Enhanced</string>
    <string name="name">Name:</string>
    <string name="mobile">Mobile Number:</string>
    <string name="groupSize">Group Size:</string>
    <string name="smokingArea">Smoking</string>
    <string name="reserve">reserve</string>
    <string name="reset">Reset</string>
    <string name="day">Click here to select day</string>
    <string name="time">Click here to select time</string>
</resources>
